@@ -26,6 +26,7 @@ Bugfixes:
  - SDL: Fix boundary conditions for joystick adjustments
  - Util: Fix a null-pointer issue when attempting to delete a key
  - SDL: Allocate properly sized input maps
+ - ARM7: Handle writeback for PC in addressing modes 2 and 3
 Misc:
  - Qt: Show multiplayer numbers in window title
  - Qt: Solar sensor can have shortcuts set
